Fix font family in header fix white space when expanding 320px

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -38,11 +38,12 @@
   }
 
   &__hire-us {
+    box-sizing: border-box;
     font-weight: 700;
     font-size: 13px;
     line-height: 150%;
     text-align: center;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
