--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   background-color: $colorDarkGrey;
+  font-family: "Poppins", sans-serif;
 
   &__content {
     box-sizing: border-box;
