--- a/src/styles/blocks/process.scss
+++ b/src/styles/blocks/process.scss
@@ -4,7 +4,6 @@
   align-items: center;
 
   &__wrapper {
-    width: 282px;
     display: flex;
     flex-direction: column;
 
@@ -45,7 +44,6 @@
 
   &__title {
     margin: 0;
-    width: 280px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 32px;
@@ -67,7 +65,6 @@
   }
 
   &__paragraph {
-    width: 280px;
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -117,7 +114,6 @@
   &__content {
     box-sizing: border-box;
     padding-top: 32px;
-    width: 280px;
     height: 260px;
     background-color: #fff;
     box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
