--- a/src/styles/blocks/testimonials.scss
+++ b/src/styles/blocks/testimonials.scss
@@ -53,7 +53,6 @@
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    width: 280px;
     background-color: #fff;
     box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
     border-radius: 16px;
