--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -21,6 +21,12 @@
   }
 }
 
+@mixin phone {
+  @media (min-width: 320px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (min-width: 639.98px) {
     @content;
