--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -1,4 +1,3 @@
-body,
 h1,
 h2,
 h3,
@@ -8,6 +7,12 @@ p,
 ul,
 li {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 ul {
